PostGIS 3.3.7
xxxx/xx/xx

* Bug Fixes and Enhancements *

 - #5649, ST_Value should return NULL on missing band (Paul Ramsey)


PostGIS 3.3.6
2024/02/07

This version requires PostgreSQL 11-16, GEOS 3.6 or higher, and Proj 4.9+
Additional features are enabled if you are running GEOS 3.9+
(and ST_MakeValid enhancements with 3.10+), Proj 6.1+,
and PostgreSQL 15+.

* Bug Fixes and Enhancements *

 - #5633, Fix postgis load, upgrade and usage with standard_conforming_strings
          set to off (Sandro Santilli, Regina Obe)
 - #5571, Memory over-allocation for narrow inputs (Paul Ramsey)
 - #5610, Regression fix: Allow Nan and infinity again
          in ST_SetPoint (Regina Obe)
 - #5627, #5647, Handling of EMPTY components in PiP check (Paul Ramsey)
 - #5629, Handling EMPTY components in repeated point removal (Paul Ramsey)
 - #5604, Handle distance between collections with empty elements (Paul Ramsey)
 - #5635, Handle NaN points in ST_Split (Regina Obe)
 - Logic error in ST_Covers(geography) (Paul Ramsey)
 - #5646, Crash on collections with empty members (Paul Ramsey)
 - #5580, Handle empty collection components in 3d distance (Paul Ramsey)
 - #5639, ST_DFullyWithin line/poly error case (Paul Ramsey)
 - #5662, Change XML parsers to SAX2 (Paul Ramsey)


PostGIS 3.3.5
2023/11/19

* Bug Fixes and Enhancements *
 - #5598, Fix restore of 3.3 dumps (Sandro Santilli)
 - #5568, Improve robustness of topology face split handling (Sandro Santilli)
 - #5548, Fix box-filtered validity check of topologies with edge-less faces
          (Sandro Santilli)
 - #5442,#5525 [postgis_tiger_geocoder,postgis_topology]
          Database search_path does not do
          what it intends to do (Jelte Fennema, Sandro Santilli, Regina Obe)
 - #5494, Fix double-upgrade with view using st_dwithin(text, ...)
          (Sandro Santilli)
 - Fix JsonB casting issue (Paul Ramsey)
 - #5616, Fix to find docbook on newer docbook installs (Regina Obe)